--- a/modules/liferay-courses-web/src/main/resources/META-INF/resources/courses/css/main.scss
+++ b/modules/liferay-courses-web/src/main/resources/META-INF/resources/courses/css/main.scss
@@ -1,3 +1,8 @@
 .liferay-courses-list-wrapper {
-
+  .sheet-section >fieldset {
+    margin-bottom: 0;
+  }
+  .courses-fieldset {
+    margin: 0 1rem;
+  }
 }
